RESOLVED FIXED18482
In frames the scrollbar is not always property repainted.
https://bugs.webkit.org/show_bug.cgi?id=18482
Summary In frames the scrollbar is not always property repainted.
Benjamin Meyer
Reported 2008-04-14 03:10:54 PDT
When browing javadoc style pages and clicking on the left frame to refresh the right frame, the scrollbar in the right frame is not always repainted. Scrolling or just even hovering the mouse over the scrollbar will correctly repaint it.
Attachments
mylyn/context/zip (13.07 KB, application/octet-stream)
2008-04-16 07:47 PDT, Tor Arne Vestbø
no flags
Tor Arne Vestbø
Comment 1 2008-04-16 07:47:47 PDT
Created attachment 20582 [details] mylyn/context/zip Testing Eclipse Mylyn context integration
Tor Arne Vestbø
Comment 2 2008-04-17 06:42:25 PDT
Fixed in Qt, will be pushed to qtwebkit.
Note You need to log in before you can comment on or make changes to this bug.