Fixes: Fix timing problem where scrollbars in subframes were sometimes not property repainted.

https://bugs.webkit.org/show_bug.cgi?id=18482

We need to repaint scrollbars after a geometry change, and also make sure
the computed clipping rect for the corners between scrollbars is propagated
to the chrome client without beeing intersected by the visible content rect
of the frame.


Canonical link: https://commits.webkit.org/25948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32676 268f45cc-cd09-0410-ab3c-d52691b4dbfc